--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" href="Style.css">
+
 </head>
 <body class="dark-theme"> <!-- Default theme class applied here -->
   <header>
@@ -323,7 +324,7 @@
   <div class="particle" style="left:85%; animation-duration:16s;"></div>
 </div>
 
+<script src="script.js"></script>
 
-  
 </body>
 </html>
